--- a/app/vnext/src/app/produtos/styles.css
+++ b/app/vnext/src/app/produtos/styles.css
@@ -1,21 +1,3 @@
-h1 {
-    display: flex;
-    font-size: xx-large;
-    font-weight: bolder;
-}
-
-div{
-    margin: 2%;
-    flex-grow: initial;
-    flex-wrap: wrap;
-    display: flex;
-    justify-items: flex-end;
-    width: 100%;
-    height: 100%;
-}
-
-section{
-    display: flex;
-    width: 100%;
-    height: 100%;
+* {
+    background: white;
 }
